--- a/assets/scss/about/_section-about.scss
+++ b/assets/scss/about/_section-about.scss
@@ -6,6 +6,14 @@
     p{
         font-size: 14px;
     }
+    .about-title{
+        font-size: 35px;
+        margin-bottom: 1.5rem;
+    }
+    .description{
+        margin-bottom: 5rem;
+        color: #7b7b93;
+    }
     .image-about{
         img{
             position: relative;
